feat: add frontend page
